--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,17 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_PASSWORD: pass123
+
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - "8081:8081"
+    depends_on:
+        - redis
