[feature] Cria o job de agendamento de envio de emails.

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,10 @@ JWT_EXPIRATION_TIME=
 # Redis Cache
 REDIS_HOST=
 REDIS_PORT=
+
+# Mail service
+SMTP_SERVICE=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_AUTH_USER=
+SMTP_AUTH_PASS=
