--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "@nestjs/mapped-types": "^1.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^1.0.1",
     "@nestjs/typeorm": "^8.0.2",
     "@prisma/client": "^3.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cron": "^1.7.3",
     "@types/hapi__joi": "^17.1.7",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
@@ -44,6 +47,8 @@
     "cookie-parser": "^1.4.5",
     "joi": "^17.4.2",
     "nestjs-pino": "^2.2.0",
+    "node-cron": "^3.0.0",
+    "nodemailer": "^6.6.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
