--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@nestjs/bull": "^0.4.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
@@ -33,6 +34,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "@prisma/client": "^3.0.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/bull": "^3.15.4",
     "@types/cookie-parser": "^1.4.2",
     "@types/cron": "^1.7.3",
     "@types/hapi__joi": "^17.1.7",
@@ -40,6 +42,7 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
+    "bull": "^3.29.2",
     "cache-manager": "^3.4.4",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.4.0",
